# miniArm_only_gazebo

./: .gitignore  .gitmodules  TODO.md  launch.bash  miniarm_wolrd.sdf  miniarm_world.sdf  note.md
MC02/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  MC02.ioc  STM32H723VGTX_FLASH.ld  STM32H723VGTX_RAM.ld  debug.jdebug
MC02/Application/: AlgCalc_Task.c  AlgCalc_Task.cpp  AlgCalc_Task.h  Debug_Task.c  Debug_Task.cpp  Debug_Task.h  robot_config.h
MC02/Core/Inc/: FreeRTOSConfig.h  dma.h  main.h  stm32h7xx_it.h
MC02/Core/Src/: adc.c  dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  usart.c
MC02/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
MC02/User_Lib/Robotics/: Alg_calc.cpp  Alg_calc.h
MC02/User_Lib/USB/: dev_usb.cpp  dev_usb.h
Matlab/: miniArm.m
Matlab/miniArmSTL/: link0.STL  link6.STL
inverted_pendulum_example/: README.md  inverted_pendulum_world.sdf  lauch.bash
inverted_pendulum_example/model/: inverted_pendulum.sdf
inverted_pendulum_example/plugin/: CMakeLists.txt
inverted_pendulum_example/plugin/.cache/clangd/index/: controller.cpp.506716BB32DDB10D.idx
inverted_pendulum_example/plugin/src/: controller.cpp
inverted_pendulum_example/src/controller_with_ros/: CMakeLists.txt  package.xml
inverted_pendulum_example/src/controller_with_ros/include/controller_with_ros/: controller_with_ros.hpp
inverted_pendulum_example/src/controller_with_ros/src/: controller_with_ros.cpp
miniArm_Rviz/: miniarm.launch.py
miniArm_URDF/meshes_dae/: link6.dae
miniArm_URDF/urdf/: miniarm.urdf  miniarm_rviz.urdf
miniArm_plugin/: CMakeLists.txt
miniArm_plugin/src/: joint_position_control.cpp
model/miniArm_URDF/meshes_dae/: base_link.dae  link2.dae
model/miniArm_URDF/urdf/: miniarm.sdf  miniarm.urdf  miniarm_collision_test.urdf
src/alg_calc/: CMakeLists.txt  package.xml
src/alg_calc/include/alg_calc/: matrix.h  robotics.h  user_function.hpp  x86_bridge.hpp
src/alg_calc/src/: calculator_node.cpp  main.cpp  matrix.cpp  robotics.cpp  utils.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/include/controller/: arm.hpp  controller.hpp  controller_interface.hpp
src/controller/msg/: ArmState.msg  JointState.msg
src/controller/src/: arm.cpp  controller.cpp  controller_interface.cpp
